--- a/src/components/TodoListItem.scss
+++ b/src/components/TodoListItem.scss
@@ -19,7 +19,7 @@
     //체크되었을 때 보여 줄 스타일
     &.checked {
       svg {
-        color: #22b8cf;
+        color: #f19aed;
       }
       .text {
         color: #adb5bd;
