--- a/src/components/TodoTemplate.scss
+++ b/src/components/TodoTemplate.scss
@@ -8,7 +8,7 @@
   overflow: hidden;
 
   .app-title {
-    background: #22b8cf;
+    background: #e262bc;
     color: white;
     height: 4rem;
     font-size: 1.5rem;
